some stuff done

--- a/bib/Network_properties_30072016_08Uhr_10h_212px_3ilen_2gap_final.ipynb
+++ b/bib/Network_properties_30072016_08Uhr_10h_212px_3ilen_2gap_final.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:26:40.192525",
-     "start_time": "2017-03-07T22:26:40.174169"
+     "end_time": "2017-03-11T21:58:06.656090",
+     "start_time": "2017-03-11T21:58:03.786244"
     },
     "collapsed": true
    },
@@ -29,31 +29,18 @@
     "import igraph as ig\n",
     "import sqlite3\n",
     "import hatching as ht\n",
-    "from scipy import stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-03-07T22:26:40.751969",
-     "start_time": "2017-03-07T22:26:40.718368"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "from scipy import stats\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:26:41.309149",
-     "start_time": "2017-03-07T22:26:41.301316"
+     "end_time": "2017-03-11T21:58:06.681711",
+     "start_time": "2017-03-11T21:58:06.676373"
     },
     "collapsed": false
    },
@@ -65,51 +52,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:26:42.608153",
-     "start_time": "2017-03-07T22:26:42.598977"
+     "end_time": "2017-03-11T21:58:06.693744",
+     "start_time": "2017-03-11T21:58:06.684546"
     },
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['24h_95conf_212dist_3ilen_2gap_1440minutes_2016-07-26 00:00:00+00:00.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-97_0.97conf_212dist_3ilen.graphml',\n",
-       " '10h_95conf_212dist_3ilen_2gap_600minutes_2016-07-31_08:00Uhr.graphml',\n",
-       " '10h_95conf_212dist_3ilen_2gap_600minutes_2016-07-30_08:00Uhr.graphml',\n",
-       " '1hT_95conf_212dist_3ilen_2gap_20minutes_2016-07-26 10:55:00+00:00.graphml',\n",
-       " '10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-01_08:00Uhr.graphml',\n",
-       " 'T1_10h_new_95conf_212dist_3ilen_2gap_600minutes_2016-08-14 08:00:00+00:00.graphml',\n",
-       " '10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-02_08:00Uhr.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-93_0.93conf_212dist_3ilen.graphml',\n",
-       " '14hDay_0.99conf_212dist_3ilen.graphml',\n",
-       " 'TTT_0.95conf_212dist_3ilen.graphml',\n",
-       " 'T1_10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-14_08_8Uhr.graphml',\n",
-       " '3h_0.99conf_212dist_3ilen.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-100_1.0conf_212dist_3ilen.graphml',\n",
-       " '1h_0.99conf_212dist_3ilen.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-94_0.94conf_212dist_3ilen.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-99_0.99conf_212dist_3ilen.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-90_0.9conf_212dist_3ilen.graphml',\n",
+       "['1-20150821000000allCams_0.99conf_160dist_6ilen.graphml',\n",
+       " '08month-160dist-09conf-3len.graphml',\n",
+       " '09month-160dist-09conf-3len.graphml',\n",
+       " 'TT2_10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-17 08:00:00+00:00.graphml',\n",
+       " 'test2016_0.99conf_160dist_3ilen.graphml',\n",
+       " '1day20150822_0.95conf_160dist_3ilen.graphml',\n",
+       " '10month-160dist-09conf-3len.graphml',\n",
+       " '08month-160dist-09conf-3len-1h.graphml',\n",
+       " '1h-allCams_0.99conf_160dist_6ilen.graphml',\n",
+       " '1day20150822_0.95conf_160dist_3ilen_filtered.graphml',\n",
+       " '10month-160dist-09conf-3len-1h.graphml',\n",
+       " '1day20150822_0.95conf_160dist_4ilen.graphml',\n",
+       " 'TT2_10h_95conf_212dist_4ilen_2gap_600minutes_2016-08-17 08:00:00+00:00.graphml',\n",
+       " '10month-320dist-09conf-3len.graphml',\n",
+       " '08month-320dist-09conf-3len.graphml',\n",
+       " 'TT3_10h_95conf_212dist_4ilen_2gap_600minutes_2016-08-20 08:00:00+00:00.graphml',\n",
+       " 'test2016_0.99conf_160dist_6ilen.graphml',\n",
+       " '1day20150822_0.95conf_160dist_5ilen.graphml',\n",
+       " '09month-160dist-09conf-3len-1h.graphml',\n",
+       " 'TT1_10h_95conf_212dist_4ilen_2gap_600minutes_2016-08-14 08:00:00+00:00.graphml',\n",
        " 'TT1_10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-14 08:00:00+00:00.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-96_0.96conf_212dist_3ilen.graphml',\n",
-       " '1h_0.99conf_175dist_3ilen.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-95_0.95conf_212dist_3ilen.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-98_0.98conf_212dist_3ilen.graphml',\n",
-       " '2h_0.99conf_175dist_3ilen.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-91_0.91conf_212dist_3ilen.graphml',\n",
-       " '1h_95conf_212dist_3ilen_2gap_60minutes_2016-07-26 15:00:00+00:00.graphml',\n",
-       " 'ttt.graphml',\n",
-       " '1hT_95conf_212dist_3ilen_2gap_20minutes_2016-07-26 23:40:00+00:00.graphml',\n",
-       " 'T_95conf_212dist_3ilen_2gap_20minutes_2016-07-26 10:50:00+00:00.graphml',\n",
-       " '2016-07-21T15:00:00Z_1h_allCams-92_0.92conf_212dist_3ilen.graphml']"
+       " 'TT3_10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-20 08:00:00+00:00.graphml',\n",
+       " '09month-320dist-09conf-3len.graphml',\n",
+       " '20150821000000allCams_0.99conf_160dist_6ilen.graphml',\n",
+       " '2015-08-21T00:00:00Z_1d_allCams_0.99conf_160dist_3ilen.graphml',\n",
+       " 'TT4_10h_95conf_212dist_3ilen_2gap_600minutes_2016-09-02 08:00:00+00:00.graphml']"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,26 +103,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-08T00:09:43.332765",
-     "start_time": "2017-03-08T00:09:43.327573"
+     "end_time": "2017-03-11T21:58:08.096649",
+     "start_time": "2017-03-11T21:58:08.092540"
     },
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "f = 'TT1_10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-14 08:00:00+00:00.graphml'"
+    "f = 'networks/0820_10h_95conf_212dist_3ilen_2gap_600minutes_2016-08-20_08:00:00+00:00.graphml'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:27:10.195369",
-     "start_time": "2017-03-07T22:26:47.603096"
+     "end_time": "2017-03-11T21:58:27.353871",
+     "start_time": "2017-03-11T21:58:13.426563"
     },
     "collapsed": false
    },
@@ -150,27 +133,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:27:10.205033",
-     "start_time": "2017-03-07T22:27:10.199298"
+     "end_time": "2017-03-11T21:58:27.363289",
+     "start_time": "2017-03-11T21:58:27.356876"
     },
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "start = \"2016-08-14\"\n",
+    "start = \"2016-08-20\"\n",
     "start_dt = datetime.datetime.strptime(start, \"%Y-%m-%d\").replace(tzinfo=pytz.UTC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:27:10.361505",
-     "start_time": "2017-03-07T22:27:10.209049"
+     "end_time": "2017-03-11T21:58:27.380671",
+     "start_time": "2017-03-11T21:58:27.366103"
     },
     "collapsed": true
    },
@@ -186,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:27:10.445848",
-     "start_time": "2017-03-07T22:27:10.365169"
+     "end_time": "2017-03-11T21:58:27.395797",
+     "start_time": "2017-03-11T21:58:27.383480"
     },
     "collapsed": true
    },
@@ -204,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:27:10.496797",
-     "start_time": "2017-03-07T22:27:10.450009"
+     "end_time": "2017-03-11T21:58:27.407838",
+     "start_time": "2017-03-11T21:58:27.398878"
     },
     "collapsed": false
    },
@@ -261,11 +244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:27:10.570877",
-     "start_time": "2017-03-07T22:27:10.499948"
+     "end_time": "2017-03-11T21:58:27.422218",
+     "start_time": "2017-03-11T21:58:27.410859"
     },
     "collapsed": false
    },
@@ -276,9 +259,9 @@
      "text": [
       "Name: \n",
       "Type: Graph\n",
-      "Number of nodes: 1193\n",
-      "Number of edges: 406023\n",
-      "Average degree: 680.6756\n"
+      "Number of nodes: 922\n",
+      "Number of edges: 291179\n",
+      "Average degree: 631.6247\n"
      ]
     }
    ],
@@ -288,11 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:27:10.621670",
-     "start_time": "2017-03-07T22:27:10.575337"
+     "end_time": "2017-03-11T21:58:29.298638",
+     "start_time": "2017-03-11T21:58:29.291864"
     },
     "collapsed": false
    },
@@ -301,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Density: 0.5710365836507142\n"
+      "Density: 0.6858031800763577\n"
      ]
     }
    ],
@@ -562,11 +545,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T22:32:13.192891",
-     "start_time": "2017-03-07T22:32:13.128710"
+     "end_time": "2017-03-11T21:58:38.946974",
+     "start_time": "2017-03-11T21:58:38.859477"
     },
     "collapsed": true
    },
@@ -615,11 +598,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-03-07T23:32:29.882677",
-     "start_time": "2017-03-07T22:32:13.986053"
+     "start_time": "2017-03-11T20:58:41.519Z"
     },
     "collapsed": false
    },
@@ -3137,7 +3119,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -3170,7 +3152,7 @@
    "threshold": 4,
    "toc_cell": false,
    "toc_position": {
-    "height": "921px",
+    "height": "643px",
     "left": "0px",
     "right": "1064px",
     "top": "107px",
